Fix spacing

--- a/src/components/card/checkable_card/_checkable_card.scss
+++ b/src/components/card/checkable_card/_checkable_card.scss
@@ -25,5 +25,5 @@ $euiCheckableCardPadding: map-get($euiPanelPaddingModifiers, 'paddingMedium');
 }
 
 .euiCheckableCard__children {
-  margin-top: $euiSizeM;
+  margin-top: $euiSize;
 }
